<resources>
    <string name="app_name">Archaeological Fieldwork</string>
    <string name="opening_screen_title">Archaeological Fieldwork</string>
    <string name="opening_screen_logo_description">logo</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_main">Archaeological Fieldwork</string>

    <string name="select_hillfort_image">Select hillfort image</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="button_location">Set Location</string>
    <string name="button_addImage">Add Image</string>
    <string name="button_addHillfort">Add Hillfort</string>
    <string name="hint_hillfortName">Hillfort Name</string>
    <string name="hint_hillfortDescription">Hillfort Description</string>
    <string name="button_editHillfort">Edit Hillfort</string>
    <string name="button_editImage">Edit Image</string>
    <string name="no_title_toast">Please enter a title!</string>

    <string name="menu_addHillfort">Add</string>
    <string name="menu_cancel">Cancel</string>
    <string name="title_activity_maps">Map</string>
    <string name="visited">Visited</string>

    <string name="visited_time">Visited on %1$s.</string>

    <string name="title_activity_settings">Settings</string>
    <string name="email_settings">email_settings</string>
    <string name="password_settings">password_settings</string>
    <string name="hillforts_added_settings">Hillforts added: %1$s.</string>
    <string name="hillforts_visited_settings">Hillforts visited: %1$s.</string>
    <string name="save_user_settings">Save User</string>
    <string name="title_activity_notes">Notes</string>
    <string name="noteAddedBy">Added By: example@email.com</string>
    <string name="noteAddedOn">Added On: October 24 2018</string>
    <string name="noteEditedOn">Edited on October 4 2018</string>
    <string name="button_view_notes">View Notes</string>
    <string name="notes_addNote">Add Note</string>
    <string name="hillforts_total">Hillforts in database: %1$s.</string>
    <string name="title_activity_hillfort_maps">Map of Hillforts</string>
    <string name="hillfort_image">Hillfort Image</string>
    <string name="hillfortLat">Lat: %1$.6f</string>
    <string name="hillfortLng">Lng: %1$.6f</string>
    <string name="rating">Rating: %1$.1f</string>
    <string name="settings">Settings</string>

    <string name="title_activity_hillfort_list">Hillforts</string>
    <string name="title_activity_hillfort">Hillfort</string>
    <string name="title_activity_edit_location">Hillfort</string>
    <string name="menu_share">Share</string>

</resources>
