<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="org.wit.archaeologicalfieldwork.activities.HillfortActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:background="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:elevation="0dp"
            android:text="@string/cancel"
            android:textColor="@color/colorWhite"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/toolbarAdd"/>
    <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:background="@android:color/transparent"
            android:text="@string/delete"
            android:textColor="@color/colorWhite"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent">

    </android.support.design.widget.AppBarLayout>
    <android.support.design.widget.TextInputEditText
            android:id="@+id/hillfortName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_hillfortName"
            android:inputType="text"
            android:maxLength="25"
            android:maxLines="1"
            android:padding="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbarAdd" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <Button
            android:id="@+id/btnAdd"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/button_addHillfort"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/hillfortDescription"
            android:layout_width="0dp" android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
    <android.support.design.widget.TextInputEditText
            android:id="@+id/hillfortDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_hillfortDescription"
            android:inputType="text"
            android:maxLength="25"
            android:maxLines="1"
            android:padding="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/hillfortName" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <Button
            android:id="@+id/hillfortLocation"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_width="150dp"
            android:text="@string/button_location"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/btnAdd"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="@+id/btnAdd"/>
    <CheckBox
            android:text="@string/visited"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/visitedCheckBox"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="@+id/hillfortLocation"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/hillfortLocation"
            app:layout_constraintBottom_toBottomOf="@+id/viewNotes"/>
    <Button
            android:id="@+id/chooseImage"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/button_addImage"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/btnAdd"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/btnAdd"
    />
    <Button
            android:id="@+id/viewNotes"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/button_view_notes"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/hillfortLocation" android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/chooseImage"/>

    <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/recyclerViewImages"
            android:scrollbars="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/visitedCheckBox" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"/>
</android.support.constraint.ConstraintLayout>