<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_marginBottom="8dp"
  android:elevation="24dp">

  <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="150dp"
          android:padding="16dp">

    <TextView
            android:text="@string/noteAddedBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/noteAddedBy" android:layout_alignParentTop="true"
            android:layout_marginTop="2dp"
            android:textSize="8sp" android:textAlignment="center"/>
    <TextView
            android:text="@string/noteAddedOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/noteAddedOn"
            android:layout_below="@+id/noteAddedBy"
            android:layout_marginTop="4dp" android:textSize="8sp" android:textAlignment="center"/>
    <TextView
            android:text="@string/noteEditedOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/noteEditedOn"
            android:layout_below="@+id/noteAddedOn"
            android:layout_marginTop="4dp" android:textSize="8sp" android:textAlignment="center"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0dp" android:id="@+id/noteText"/>
  </RelativeLayout>
</android.support.v7.widget.CardView>